--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&type=webgl&ak=T3evdS16Ytd266EKWa05lpJ4zerqppSF"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
