--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
     <title>coderqsh的小屋</title>
   </head>
   <body>
     <div id="app"></div>
-    <script type="text/javascript" src="https://api.map.baidu.com/api?v=3.0&type=webgl&ak=T3evdS16Ytd266EKWa05lpJ4zerqppSF"></script>
+    <script type="text/javascript" src="https://api.map.baidu.com/getscript?v=3.0&type=webgl&ak=T3evdS16Ytd266EKWa05lpJ4zerqppSF"></script>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
